<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.YouFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:background="@android:color/darker_gray"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="191dp"
                android:layout_height="145dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/avatar_placeholder"
                    android:layout_width="126dp"
                    android:layout_height="103dp"
                    android:layout_weight="1"
                    android:paddingLeft="19dp"
                    android:paddingRight="19dp"
                    android:src="@mipmap/mario_avatar" />

                <TextView
                    android:id="@+id/profileUsernameText"
                    android:layout_width="127dp"
                    android:layout_height="23dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:text="@string/yudixie"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <ImageView
                    android:id="@+id/statsIcon"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_assessment_pink_a700_48dp" />

                <TextView
                    android:id="@+id/statsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:paddingTop="12dp"
                    android:text="@string/statistics"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="17sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="74dp">

                <ImageView
                    android:id="@+id/helpIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_live_help_teal_a700_48dp" />

                <TextView
                    android:id="@+id/HelpText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/helpContact"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="17sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="26dp"

                android:layout_gravity="bottom">

                <ImageView
                    android:id="@+id/switchAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_supervisor_account_cyan_a700_48dp" />

                <TextView
                    android:id="@+id/switchAccText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:paddingTop="12dp"
                    android:text="@string/switchAccText"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="17sp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</FrameLayout>