<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".user.JourneyViewerActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/advertisement_viewer_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="40sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/advStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_note_add_black_24dp"
                android:text="TextView"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/seatsTex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_event_seat_black_24dp"
                android:text="TextView"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/advertisement_viewer_startsAtLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_location_on_black_24dp"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/advertisement_viewer_startsAtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_access_time_black_24dp"
                android:textColor="#131d21"
                android:textSize="24sp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/driversInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/carColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="14dp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="?android:attr/listDivider" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/ic_public_black_36dp"
                android:text="@string/label_stops"
                android:textColor="#131d21"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/viewonMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_arrow_forward_red_500_24dp"
                android:drawableRight="@drawable/ic_arrow_back_red_a700_24dp"
                android:onClick="startMap"
                android:text="@string/viewOnmap"
                android:textSize="21sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvStopsForJourney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/advertisement_viewer_join_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/advertisement_viewer_join_button" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>